--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.0.0",
-    "vue-i18n": "^9.0.0-beta.8",
+    "vue-i18n": "9.0.0-beta.8",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
