--- a/package.json
+++ b/package.json
@@ -15,16 +15,16 @@
     "@ckeditor/ckeditor5-build-decoupled-document": "^23.1.0",
     "@ckeditor/ckeditor5-vue": "^2.0.1",
     "@toast-ui/editor": "^2.5.1",
-    "ant-design-vue": "^2.0.0-rc.8",
+    "ant-design-vue": "^2.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.8.3",
     "echarts": "^4.9.0",
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "vue": "^3.0.5",
-    "vue-i18n": "^9.0.0-rc.2",
-    "vue-router": "^4.0.3",
-    "vuex": "^4.0.0-rc.2"
+    "vue-i18n": "^9.0.0-rc.8",
+    "vue-router": "^4.0.4",
+    "vuex": "^4.0.0"
   },
   "devDependencies": {
     "@types/echarts": "^4.9.2",
@@ -41,7 +41,7 @@
     "@vue/cli-service": "~4.5.10",
     "@vue/compiler-sfc": "^3.0.5",
     "@vue/eslint-config-typescript": "^5.1.0",
-    "@vue/test-utils": "^2.0.0-beta.14",
+    "@vue/test-utils": "^2.0.0-rc.1",
     "body-parser": "^1.19.0",
     "chokidar": "^3.5.1",
     "eslint": "^6.8.0",
