--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "echarts": "^4.9.0",
     "localforage": "^1.9.0",
     "lodash.debounce": "^4.0.8",
+    "nprogress": "^0.2.0",
     "vue": "^3.2.2",
     "vue-i18n": "^9.1.7",
     "vue-router": "^4.0.11",
