--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.37",
-    "vue-i18n": "^9.1.10",
-    "vue-router": "^4.1.2",
+    "vue": "^3.2.39",
+    "vue-i18n": "~9.1.10",
+    "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
@@ -52,7 +52,7 @@
     "svgo": "^1.3.2",
     "ts-jest": "^26.5.6",
     "typescript": "^4.6.4",
-    "vite": "^2.9.14",
+    "vite": "^2.9.15",
     "vue-jest": "^5.0.0-alpha.10"
   },
   "keywords": [
