--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "localforage": "^1.10.0",
     "lodash.debounce": "^4.0.8",
     "nprogress": "^0.2.0",
-    "vue": "^3.2.37",
-    "vue-i18n": "^9.1.10",
-    "vue-router": "^4.1.2",
+    "vue": "^3.2.39",
+    "vue-i18n": "~9.1.10",
+    "vue-router": "^4.1.5",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
